package banana.republic.plugin;

import banana.republic.board.Board;

public interface MapGeneratorPlugin {

    Board generateBoard();
}
