package banana.republic.save;

/**
 * Board save data DTO.
 * Refer to class-diagram/Module5_UI_Plugin_Save.puml for full specification.
 */
public class BoardSaveData {
    // TODO: Implement
}
