package banana.republic.save;

/**
 * Harbor save data DTO.
 * Refer to class-diagram/Module5_UI_Plugin_Save.puml for full specification.
 */
public class HarborSaveData {
    // TODO: Implement
}
