package banana.republic.save;

/**
 * Hex tile save data DTO.
 * Refer to class-diagram/Module5_UI_Plugin_Save.puml for full specification.
 */
public class HexTileSaveData {
    // TODO: Implement
}
