package banana.republic.save;

/**
 * Player save data DTO.
 * Refer to class-diagram/Module5_UI_Plugin_Save.puml for full specification.
 */
public class PlayerSaveData {
    // TODO: Implement
}
