package banana.republic.ui;

/**
 * Hexagonal board renderer.
 * Refer to class-diagram/Module5_UI_Plugin_Save.puml for full specification.
 */
public class BoardRenderer {
    // TODO: Implement
}
