package banana.republic.ui;

/**
 * Card dialog controller.
 * Refer to class-diagram/Module5_UI_Plugin_Save.puml for full specification.
 */
public class CardDialogController {
    // TODO: Implement
}
