package banana.republic.ui;

/**
 * Main game controller.
 * Refer to class-diagram/Module5_UI_Plugin_Save.puml for full specification.
 */
public class GameController {
    // TODO: Implement
}
