package banana.republic.ui;

/**
 * Game result / end screen controller.
 * Refer to class-diagram/Module5_UI_Plugin_Save.puml for full specification.
 */
public class GameResultController {
    // TODO: Implement
}
