package banana.republic.ui;

/**
 * Lobby controller for game setup.
 * Refer to class-diagram/Module5_UI_Plugin_Save.puml for full specification.
 */
public class LobbyController {
    // TODO: Implement
}
