package banana.republic.ui;

/**
 * Player configuration data for lobby.
 * Refer to class-diagram/Module5_UI_Plugin_Save.puml for full specification.
 */
public class PlayerConfig {
    // TODO: Implement
}
